[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/Menus/Inicial.gd" type="Script" id=1]
[ext_resource path="res://Fontes/GOTHAMBOLDITALIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Fontes/GOTHAM-BLACK.OTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 75
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 874.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 32.0
margin/right = 992.0
margin/bottom = 842.0
alignment = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]

rect/min_size = Vector2( 960, 350 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 960.0
margin/bottom = 350.0
use_top_left = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 347.0
margin/top = 141.0
margin/right = 613.0
margin/bottom = 208.0
custom_fonts/font = SubResource( 1 )
text = "Digilex"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]

rect/min_size = Vector2( 960, 456 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 354.0
margin/right = 960.0
margin/bottom = 810.0
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 128 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 960.0
margin/bottom = 128.0
custom_constants/margin_right = 80
custom_constants/margin_top = 32
custom_constants/margin_left = 80
custom_constants/margin_bottom = 32

[node name="Jogar" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]

rect/min_size = Vector2( 0, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 32.0
margin/right = 880.0
margin/bottom = 96.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Jogar"
flat = false

[node name="MarginContainer1" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 128 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 132.0
margin/right = 960.0
margin/bottom = 260.0
custom_constants/margin_right = 80
custom_constants/margin_top = 32
custom_constants/margin_left = 80
custom_constants/margin_bottom = 32

[node name="Pontuacao" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1"]

rect/min_size = Vector2( 0, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 32.0
margin/right = 880.0
margin/bottom = 96.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pontuação"
flat = false

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 128 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 264.0
margin/right = 960.0
margin/bottom = 392.0
custom_constants/margin_right = 80
custom_constants/margin_top = 32
custom_constants/margin_left = 80
custom_constants/margin_bottom = 32

[node name="Configuracao" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]

rect/min_size = Vector2( 0, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 32.0
margin/right = 880.0
margin/bottom = 96.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Configurações"
flat = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Jogar" to="." method="_on_Jogar_pressed"]

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/Pontuacao" to="." method="_on_Pontuacao_pressed"]

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Configuracao" to="." method="_on_Configuracao_pressed"]


